changed mysql image to mariadb to prevent runtime issues on M1
