# app/_ide_helper_models.php
@@ -14,33 +14,58 @@ namespace App\Models{
 /**
  * App\Models\JwtToken
  *
- * @property int $id
- * @property string $unique_id
- * @property int $user_id
- * @property string $token_title
- * @property mixed|null $restrictions
- * @property mixed|null $permissions
- * @property string|null $expires_at
- * @property string|null $last_used_at
- * @property string|null $refreshed_at
- * @property \Illuminate\Support\Carbon|null $created_at
- * @property \Illuminate\Support\Carbon|null $updated_at
  * @property-read \App\Models\User|null $user
+ * @method static \Database\Factories\JwtTokenFactory factory($count = null, $state = [])
  * @method static \Illuminate\Database\Eloquent\Builder|JwtToken newModelQuery()
  * @method static \Illuminate\Database\Eloquent\Builder|JwtToken newQuery()
  * @method static \Illuminate\Database\Eloquent\Builder|JwtToken query()
- * @method static \Illuminate\Database\Eloquent\Builder|JwtToken whereCreatedAt($value)
- * @method static \Illuminate\Database\Eloquent\Builder|JwtToken whereExpiresAt($value)
- * @method static \Illuminate\Database\Eloquent\Builder|JwtToken whereId($value)
- * @method static \Illuminate\Database\Eloquent\Builder|JwtToken whereLastUsedAt($value)
- * @method static \Illuminate\Database\Eloquent\Builder|JwtToken wherePermissions($value)
- * @method static \Illuminate\Database\Eloquent\Builder|JwtToken whereRefreshedAt($value)
- * @method static \Illuminate\Database\Eloquent\Builder|JwtToken whereRestrictions($value)
- * @method static \Illuminate\Database\Eloquent\Builder|JwtToken whereTokenTitle($value)
- * @method static \Illuminate\Database\Eloquent\Builder|JwtToken whereUniqueId($value)
- * @method static \Illuminate\Database\Eloquent\Builder|JwtToken whereUpdatedAt($value)
- * @method static \Illuminate\Database\Eloquent\Builder|JwtToken whereUserId($value)
  */
 	class JwtToken extends \Eloquent {}
+}
+
+namespace App\Models{
+/**
+ * App\Models\User
+ *
+ * @property int $id
+ * @property string $uuid
+ * @property string $first_name
+ * @property string $last_name
+ * @property int $is_admin
+ * @property string $email
+ * @property \Illuminate\Support\Carbon|null $email_verified_at
+ * @property mixed $password
+ * @property string|null $avatar
+ * @property string $address
+ * @property string $phone_number
+ * @property int $is_marketing
+ * @property string|null $last_login_at
+ * @property \Illuminate\Support\Carbon|null $created_at
+ * @property \Illuminate\Support\Carbon|null $updated_at
+ * @property-read \Illuminate\Database\Eloquent\Collection<int, \App\Models\JwtToken> $jwtTokens
+ * @property-read int|null $jwt_tokens_count
+ * @property-read \Illuminate\Notifications\DatabaseNotificationCollection<int, \Illuminate\Notifications\DatabaseNotification> $notifications
+ * @property-read int|null $notifications_count
+ * @method static \Database\Factories\UserFactory factory($count = null, $state = [])
+ * @method static \Illuminate\Database\Eloquent\Builder|User newModelQuery()
+ * @method static \Illuminate\Database\Eloquent\Builder|User newQuery()
+ * @method static \Illuminate\Database\Eloquent\Builder|User query()
+ * @method static \Illuminate\Database\Eloquent\Builder|User whereAddress($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|User whereAvatar($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|User whereCreatedAt($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|User whereEmail($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|User whereEmailVerifiedAt($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|User whereFirstName($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|User whereId($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|User whereIsAdmin($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|User whereIsMarketing($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|User whereLastLoginAt($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|User whereLastName($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|User wherePassword($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|User wherePhoneNumber($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|User whereUpdatedAt($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|User whereUuid($value)
+ */
+	class User extends \Eloquent {}
 }
 
